[package]
name = "rsmk"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features=["inline-asm"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.7.0", features = [ "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    ] }
embassy-rp = { version = "0.4.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.4.0", features = [
    "defmt",
] }
embassy-usb-logger = "0.4.0"
log = "0.4.27"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
