[package]
name = "rsmk"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features=["inline-asm"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "9651cfca51a273ba46d34ce8197fc0e63389b09e", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    ] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "9651cfca51a273ba46d34ce8197fc0e63389b09e", features = ["defmt"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", rev = "9651cfca51a273ba46d34ce8197fc0e63389b09e", features = [
#embassy-rp = { version = "0.4.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "9651cfca51a273ba46d34ce8197fc0e63389b09e", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", rev = "9651cfca51a273ba46d34ce8197fc0e63389b09e", features = [
    "defmt",
] }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy.git", rev = "9651cfca51a273ba46d34ce8197fc0e63389b09e" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "9651cfca51a273ba46d34ce8197fc0e63389b09e" }
log = "0.4.27"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
smart-leds = "0.4.0"
spin = "0.10.0"
usbd-hid = { version = "0.8.2", features = ["defmt"] }
static_cell = "2.1.1"
